# learning-platform

./: README.md  pyproject.toml  requirements.txt
src/app/: models.py  urls.py  views.py
src/app/migrations/: 0001_initial.py  0002_topic_room_host_message_room_topic.py
src/app/templates/app/: delete.html  home.html  room.html  room_form.html
src/config/: settings.py
src/config/components/: app_definition.py
src/templates/: main.html
