[build-system]
requires = ["setuptools>=62.0"]

[project]
name = "learning-platform"
version = "0.0.1"
description = ""
authors = ["August"]
readme = "README.md"
requires-python = ">=3.11"
packages = [{include = "src"}]
dependencies = [
    "Django",
    "python-dotenv",
    "django-split-settings",
]

[tool.setuptools.packages.find]
where = ["src"]


[tool.ruff]
ignore = ["E701"]